riseml/templates/api-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: riseml-api
  labels:
    app: riseml-api
spec:
  selector:
    app: riseml-api
  ports:
  - port: 80
