riseml/templates/ingress-http-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: riseml-http-backend
  namespace: riseml
  labels:
    k8s-app: riseml-http-backend
spec:
  ports:
  - port: 80
    targetPort: 8080
  selector:
    k8s-app: riseml-http-backend
