riseml/templates/loghandler-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: riseml-loghandler
  labels:
    app: riseml-loghandler
spec:
  selector:
    app: riseml-loghandler
  ports:
  - port: 80
    targetPort: 3100
