riseml/templates/rabbitmq-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: riseml-rabbitmq
  labels:
    app: riseml-rabbitmq
spec:
  ports:
  - port: 5672
    name: rabbitmq-port
  - port: 15672
    name: rabbitmq-mgmt-port
  selector:
    app: riseml-rabbitmq
