riseml/templates/registry-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: riseml-registry
  labels:
    app: riseml-registry
spec:
  ports:
  - port: 5000
    name: registry-port
    protocol: TCP
    nodePort: 31500
  selector:
    app: riseml-registry
  type: NodePort
